--- a/cursus/static/scss/components/_navbar.scss
+++ b/cursus/static/scss/components/_navbar.scss
@@ -191,4 +191,31 @@
       color: rgb(var(--color-gray-50) / 1);
     }
   }
+
+  &__avatar {
+    border-radius: 9999px;
+    overflow: hidden;
+    flex-shrink: 0;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+
+    &__container {
+      position: relative;
+      aspect-ratio: 1/1;
+      width: 100%;
+      height: 100%;
+    }
+
+    &__image {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      color: transparent;
+    }
+  }
 }
