chore: add depends option to watch for files during bundle

--- a/cursus/static/scss/_root.scss
+++ b/cursus/static/scss/_root.scss
@@ -1,7 +1,7 @@
 :root {
   --color-black: 31 35 40;
   --color-white: 255 255 255;
-  --color-cursus: 130 80 223;
+  --color-cursus: 99 102 241;
   --color-gray-50: 246 248 250;
   --color-gray-100: 234 238 242;
   --color-gray-200: 208 215 222;
@@ -92,4 +92,15 @@
   --color-coral-700: 128 31 15;
   --color-coral-800: 105 17 5;
   --color-coral-900: 81 9 1;
+  --color-indigo-50: 240 243 255;
+  --color-indigo-100: 224 232 255;
+  --color-indigo-200: 200 211 254;
+  --color-indigo-300: 166 180 252;
+  --color-indigo-400: 130 141 248;
+  --color-indigo-500: 99 102 241;
+  --color-indigo-600: 79 70 229;
+  --color-indigo-700: 67 56 202;
+  --color-indigo-800: 55 48 163;
+  --color-indigo-900: 49 46 129;
+  --color-indigo-950: 30 27 75;
 }
