--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -88,9 +88,8 @@
       <div class="col-12 col-lg-6">
         <a
           href="/docs"
-          class="btn btn--fluid btn--round"
+          class="btn btn--secondary btn--cursus btn--fluid btn--rounded btn--large"
           target="_blank"
-          style="--cursus-btn-text: 77 69 230; --cursus-btn-bg: 224 231 255"
           >GITHUB</a
         >
       </div>
