--- a/cursus/templates/macros/navbar.html
+++ b/cursus/templates/macros/navbar.html
@@ -49,7 +49,7 @@
         </div>
         {% else %}
         <a
-          class="navbar__pill"
+          class="btn btn--rounded btn--primary btn--large"
           href="{{ url_for('views.show', page_name='login') }}"
         >
           Login
