--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -2,7 +2,7 @@
 {{ super() }}
 <link rel="stylesheet" href="/static/css/_hero.css" />
 {% endblock %} {% block main %} {{ super() }}
-<section class="hero__section">
+<section class="hero__section container-lg position-relative">
   <div class="hero__banner">
     <img
       class="hero__banner-image"
