feat: add profile page

--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -80,9 +80,9 @@
     "css/index.css", "css/_grid.css", "css/_dropdown.css", "css/_footer.css",
     "css/_button.css" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" />
-    {% endassets %} {% endblock %} {% endblock %} {% assets "css_all" %}
+    {% endassets %} {% endblock %} {% assets "css_all" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" />
-    {% endassets %}
+    {% endassets %} {% endblock %}
   </head>
   <body>
     <button type="button" id="installButton" class="display-none">
