--- a/cursus/templates/profile.html
+++ b/cursus/templates/profile.html
@@ -1,11 +1,7 @@
-{% extends "_base.html" %} {% block title %}Profile{% endblock %} {% block
-css %} {{ super() }}
-<link rel="stylesheet" href="/static/css/_profile.css" />
-{% endblock %} {% block main %} {{ super() }}
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Documentation</h1>
-            <p>
-                This is the documentation for the <a href="
+{% extends "_base.html" %} {% block title %}Profile{% endblock %} {% block css
+%} {{ super() }} {% assets filters="scss,autoprefixer6,cssmin",
+output="css/profile.bundle.css", "scss/pages/profile.scss" %}
+<link rel="stylesheet" href="{{ ASSET_URL }}" />
+{% endassets %} {% endblock %} {% block main %} {{ super() }}
+<div class="container conntainer-md container-lg"></div>
 {% endblock %}
