--- a/cursus/templates/about.html
+++ b/cursus/templates/about.html
@@ -14,7 +14,7 @@
     <img src="/static/img/about-grid.png" width="1440" height="360" />
   </div>
 </div>
-<section class="container-lg about__section">
+<section class="container-lg about__section mb-24">
   <h1>Why Cursus?</h1>
   <p>
     Cursus is a free, open-source API that provides information about
