--- a/cursus/templates/doc-more.html
+++ b/cursus/templates/doc-more.html
@@ -15,7 +15,7 @@ css %} {{ super() }}
     />
   </div>
 </div>
-<section class="container-lg">
+<section class="container-sm container-md container-lg mb-24">
   <div class="docs__breadcrumb">
     <div class="docs__breadcrumb__container">
       <a href="/" class="docs__breadcrumb__link">Home</a>
