--- a/cursus/templates/docs.html
+++ b/cursus/templates/docs.html
@@ -13,7 +13,7 @@ css %} {{ super() }}
     <img src="/static/img/docs-banner.png" width="1440" height="360" alt="Main doc banner">
   </div>
 </div>
-<div class="docs__card-wrapper">
+<div class="docs__card-wrapper mb-24">
   <a href="{{ url_for("views.docs", page_name="search.html") }}" class="docs__card">
     <div class="docs__card__header">
       <i class="fi fi-rr-search"></i>
