--- a/cursus/templates/macros/footer.html
+++ b/cursus/templates/macros/footer.html
@@ -1,17 +1,17 @@
 {% macro footer() -%}
 <footer class="footer">
-  <div class="container container-lg">
+  <div class="container-sm container-md container-lg">
     <div class="row items-center gap-3 gap-lg-0">
       <div class="col-12 col-lg-6">
         <p class="footer__title">Made with ❤️ by Richard Nguyen</p>
       </div>
       <div class="col-12 col-lg-6">
         <div class="footer__legality">
-          <div class="footer__legality-wrapper">
-            <a class="footer__legality-link" href="#">Privacy</a>
-            <a class="footer__legality-link" href="#">Terms</a>
-            <a class="footer__legality-link" href="#">Contact</a>
-            <a class="footer__legality-link" href="#">FAQ</a>
+          <div class="footer__legality__wrapper">
+            <a class="footer__legality__link" href="#">Privacy</a>
+            <a class="footer__legality__link" href="#">Terms</a>
+            <a class="footer__legality__link" href="#">Contact</a>
+            <a class="footer__legality__link" href="#">FAQ</a>
           </div>
         </div>
       </div>
