--- a/cursus/templates/macros/navbar.html
+++ b/cursus/templates/macros/navbar.html
@@ -8,11 +8,11 @@
       href="{{ url_for('views.show', page_name='index') }}"
     >
       <img
-        class="navbar__brand-logo"
+        class="navbar__brand__logo"
         src="/static/img/logo-180.png"
         alt="Cursus"
       />
-      <p class="navbar__brand-text">Cursus</p>
+      <p class="navbar__brand__text">Cursus</p>
     </a>
     <div class="navbar__collapse">
       <div class="navbar__collapse-left">
