--- a/cursus/templates/profile.html
+++ b/cursus/templates/profile.html
@@ -3,5 +3,7 @@
 output="css/profile.bundle.css", "scss/pages/profile.scss" %}
 <link rel="stylesheet" href="{{ ASSET_URL }}" />
 {% endassets %} {% endblock %} {% block main %} {{ super() }}
-<div class="container conntainer-md container-lg"></div>
+<div class="profile">
+  <div class="container-sm conntainer-md container-lg"></div>
+</div>
 {% endblock %}
