--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 </div>
-<div class="hero__tryout">
+<div class="hero__tryout mb-24">
   <div class="hero__table">
     <div class="row">
       <div class="col-6">
