--- a/cursus/templates/macros/navbar.html
+++ b/cursus/templates/macros/navbar.html
@@ -71,7 +71,7 @@
         <i class="fi fi-rr-menu-burger"></i>
       </button>
       <div class="dropdown__menu navbar__dropdown__menu">
-        <ul class="navbar__dropdown-list">
+        <ul class="navbar__dropdown__list">
           <li>
             <a
               class="navbar__dropdown__item"
