--- a/cursus/static/scss/components/_button.scss
+++ b/cursus/static/scss/components/_button.scss
@@ -41,6 +41,40 @@
         border-color: rgb(var(--color-indigo-700) / 1);
       }
     }
+
+    &.btn--neutral {
+      background-color: rgb(var(--color-gray-50) / 1);
+      border-color: rgb(var(--color-gray-100) / 1);
+      color: rgb(var(--color-gray-900) / 1);
+
+      &:hover {
+        background-color: rgb(var(--color-gray-100) / 1);
+        border-color: rgb(var(--color-gray-200) / 1);
+        color: rgb(var(--color-black) / 1);
+      }
+    }
+
+    &.btn--accent {
+      background-color: rgb(var(--color-blue-500) / 1);
+      border-color: rgb(var(--color-blue-600) / 1);
+      color: rgb(var(--color-white) / 1);
+
+      &:hover {
+        background-color: rgb(var(--color-blue-600) / 1);
+        border-color: rgb(var(--color-blue-700) / 1);
+      }
+    }
+
+    &.btn--danger {
+      background-color: rgb(var(--color-red-500) / 1);
+      border-color: rgb(var(--color-red-600) / 1);
+      color: rgb(var(--color-white) / 1);
+
+      &:hover {
+        background-color: rgb(var(--color-red-600) / 1);
+        border-color: rgb(var(--color-red-700) / 1);
+      }
+    }
   }
 
   /* Secondary button: .btn--secondary
@@ -64,6 +98,28 @@
       &:hover {
         background-color: rgb(var(--color-indigo-100) / 1);
         border-color: rgb(var(--color-indigo-200) / 1);
+      }
+    }
+
+    &.btn--accent {
+      background-color: rgb(var(--color-blue-50) / 1);
+      color: rgb(var(--color-blue-500) / 1);
+      border-color: rgb(var(--color-blue-100) / 1);
+
+      &:hover {
+        background-color: rgb(var(--color-blue-100) / 1);
+        border-color: rgb(var(--color-blue-200) / 1);
+      }
+    }
+
+    &.btn--danger {
+      background-color: rgb(var(--color-red-50) / 1);
+      color: rgb(var(--color-red-500) / 1);
+      border-color: rgb(var(--color-red-100) / 1);
+
+      &:hover {
+        background-color: rgb(var(--color-red-100) / 1);
+        border-color: rgb(var(--color-red-200) / 1);
       }
     }
   }
@@ -99,16 +155,45 @@
     border-radius: 9999px;
   }
 
+  &.btn--icon {
+    height: 2rem;
+    width: 2rem;
+    padding: 0rem;
+  }
+
   &--large {
     height: 2.5rem;
     padding: 0rem 1rem;
     gap: 0.5rem;
+
+    &.btn--icon {
+      height: 2.5rem;
+      width: 2.5rem;
+      padding: 0rem;
+
+      &>i,
+      &>svg {
+        font-size: 1.25rem;
+      }
+    }
   }
 
   &--xl {
     height: 3rem;
     padding: 0rem 1.5rem;
     gap: 0.75rem;
+
+
+    &.btn--icon {
+      height: 3rem;
+      width: 3rem;
+      padding: 0rem;
+
+      &>i,
+      &>svg {
+        font-size: 1.5rem;
+      }
+    }
   }
 
   &--fluid {
