--- a/cursus/static/scss/pages/profile.scss
+++ b/cursus/static/scss/pages/profile.scss
@@ -2,4 +2,160 @@
   position: relative;
   background: rgb(var(--color-gray-100) / 0.75);
   min-height: calc(100vh - 11.75rem); // minus navbar height + footer height
+
+  &__sticky-nav {
+    position: sticky;
+    top: 88px;
+    z-index: 1;
+
+    background-color: rgb(var(--color-white) / 1);
+    box-shadow: 0 0.5rem 1rem rgb(var(--color-black) / 0.15);
+
+    padding: 1rem;
+    border-radius: 12px;
+  }
+
+  &__nav {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+
+    list-style: none;
+
+    &-item {
+      position: relative;
+      display: flex;
+      align-items: center;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      background: transparent;
+      transition: background 0.1s ease-in-out;
+      font-size: 14px;
+
+      &:hover {
+        background: rgb(var(--color-gray-100) / 1);
+      }
+    }
+  }
+
+  &__info {
+    position: relative;
+    display: flex;
+    gap: 2rem;
+    background-color: rgb(var(--color-white) / 1);
+    box-shadow: 0 0.5rem 1rem rgb(var(--color-black) / 0.15);
+
+    padding: 1rem;
+    border-radius: 12px;
+  }
+
+  &__img {
+    width: 4rem;
+    height: 4rem;
+    font-size: 1rem;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.75rem;
+
+    &>img {
+      width: 100%;
+      border-radius: 0.75rem;
+    }
+  }
+
+  &__heading {
+    display: flex;
+    align-items: center;
+  }
+
+  &__fullname {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin: 0;
+  }
+
+  &__detail {
+    position: relative;
+
+    background-color: rgb(var(--color-white) / 1);
+    box-shadow: 0 0.5rem 1rem rgb(var(--color-black) / 0.15);
+
+    padding: 1rem;
+    border-radius: 12px;
+  }
+
+  &__form-input {
+    position: relative;
+    display: flex;
+    max-width: 100%;
+
+    background: rgb(var(--color-gray-100) / 1);
+
+    border-radius: 8px;
+  }
+
+  &__display {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    padding: 0.5rem 1rem;
+    width: 100%;
+    border: 1px solid rgb(var(--color-gray-200) / 1);
+    border-right-color: transparent;
+
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+  }
+
+  &__action {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 2rem;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding: 0.5rem 0.5rem;
+    border: 1px solid rgb(var(--color-gray-200) / 1);
+
+    &:hover {
+      background: rgb(var(--color-gray-200) / 1);
+      border-color: rgb(var(--color-gray-400) / 1);
+    }
+
+    &__btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+      height: 100%;
+
+    }
+  }
+
+  &__spa {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+    padding-bottom: 1rem;
+
+    &>h2 {
+      margin-bottom: 0.5rem;
+    }
+
+    &>p {
+      margin-bottom: 1.5rem;
+    }
+
+    &>div,
+    &>pre {
+      margin-bottom: 1rem;
+    }
+  }
 }
