--- a/cursus/templates/profile-token.html
+++ b/cursus/templates/profile-token.html
@@ -12,12 +12,17 @@
   <div class="w-full">
     <div class="display-flex items-center gap-2 ml-auto w-fit mt-4">
       <button
+        id="revoke-btn"
         type="button"
         class="btn btn--medium btn--secondary btn--danger btn--icon"
       >
         <i class="fi fi-rr-trash"></i>
       </button>
-      <button type="button" class="btn btn--medium btn--primary btn--cursus">
+      <button
+        id="generate-btn"
+        type="button"
+        class="btn btn--medium btn--primary btn--cursus"
+      >
         <i class="fi fi-rr-refresh"></i>
         Generate
       </button>
