--- a/cursus/static/scss/pages/profile.scss
+++ b/cursus/static/scss/pages/profile.scss
@@ -101,6 +101,8 @@
     display: flex;
     align-items: center;
 
+    color: rgb(var(--color-gray-400) / 1);
+
     padding: 0.5rem 1rem;
     width: 100%;
     border: 1px solid rgb(var(--color-gray-200) / 1);
