--- a/cursus/templates/macros/navbar.html
+++ b/cursus/templates/macros/navbar.html
@@ -23,7 +23,7 @@
         >
         <a
           class="navbar__link{% if page_name == 'docs' %} navbar__link--active{% endif %}"
-          href="{{ url_for('views.show', page_name='docs') }}"
+          href="{{ url_for('views.docs.show_main_doc') }}"
           >Docs</a
         >
         <a
