--- a/cursus/static/scss/pages/profile.scss
+++ b/cursus/static/scss/pages/profile.scss
@@ -18,7 +18,7 @@
   &__nav {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
 
     list-style: none;
 
@@ -34,6 +34,18 @@
 
       &:hover {
         background: rgb(var(--color-gray-100) / 1);
+      }
+
+      &.profile--active::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 0.25rem;
+        height: 80%;
+        background: rgb(var(--color-cursus) / 1);
+        border-radius: 6px 8px 8px 6px;
+        transform: translateY(-50%);
       }
     }
   }
