feat: add caching for number of times generting tokens

--- a/cursus/static/scss/pages/profile.scss
+++ b/cursus/static/scss/pages/profile.scss
@@ -150,6 +150,22 @@
       height: 100%;
 
     }
+
+    &__message {
+      position: relative;
+      display: flex;
+      font-size: 14px;
+      align-items: center;
+
+      & .profile--danger {
+        color: rgb(var(--color-red-500) / 1);
+      }
+
+      & .profile--success {
+        color: rgb(var(--color-green-500) / 1);
+      }
+    }
+
   }
 
   &__spa {
