--- a/cursus/templates/profile-token.html
+++ b/cursus/templates/profile-token.html
@@ -17,6 +17,7 @@
   </div>
   <div class="w-full">
     <div class="display-flex items-center gap-2 ml-auto w-fit mt-4">
+      <div id="token-action-message" class="profile__action__message"></div>
       <button
         id="revoke-btn"
         type="button"
