chore: migrate login.css to _login.scss

--- a/cursus/templates/login.html
+++ b/cursus/templates/login.html
@@ -1,7 +1,5 @@
-{% extends "_base.html" %} {% block title %}Login{% endblock %} {% block css %}
+{% extends "_base.html" %} {% block title %}Login{% endblock %}{% block main %}
 {{ super() }}
-<link rel="stylesheet" href="/static/css/_login.css" />
-{% endblock %} {% block main %} {{ super() }}
 <section class="login__section">
   <h1 class="login__heading">Login</h1>
   <div class="login__container">
@@ -10,8 +8,6 @@
       class="login__btn login__btn--google"
     >
       <img
-        width="24"
-        height="24"
         src="{{ url_for('static', filename='img/google-g-logo.svg') }}"
         alt="Google Logo"
         class="login__btn-img"
@@ -23,8 +19,6 @@
       class="login__btn login__btn--github"
     >
       <img
-        width="24"
-        height="24"
         src="{{ url_for('static', filename='img/github-mark-white.svg') }}"
         alt="GitHub Logo"
         class="login__btn-img"
@@ -36,8 +30,6 @@
       class="login__btn login__btn--discord"
     >
       <img
-        width="24"
-        height="24"
         src="{{ url_for('static', filename='img/discord-clyde-logo.svg') }}"
         alt="GitHub Logo"
         class="login__btn-img"
