--- a/cursus/static/scss/components/_button.scss
+++ b/cursus/static/scss/components/_button.scss
@@ -9,6 +9,7 @@
   text-align: center;
   cursor: pointer;
 
+  width: fit-content;
   min-width: max-content;
   padding: 0rem 0.75rem;
   height: 2rem;
