--- a/cursus/templates/profile-token.html
+++ b/cursus/templates/profile-token.html
@@ -49,3 +49,12 @@
 }
   </code>
 </pre>
+<h2>Note</h2>
+<p>
+  You can use this API token to access the API without logging in your
+  application. However, the rate limit is <code>50 requests per hour</code>.
+</p>
+<p>
+  You can also request to create a new token. The rate limit is
+  <code>5 tokens per day</code>.
+</p>
